--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "table2_0",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 80",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "vue-class-component": "^8.0.0-0",
+    "vue-class-component": "8.0.0-rc.1",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuedraggable": "^4.1.0",
+    "vuex": "^4.0.0-0",
+    "vuex-module-decorators": "^2.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
